feat: create api delete for factories
